# nestegg

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: linter.yml
nestegg/: __init__.py  calculator.py  cli.py  config.py  constants.py  external_api.py  main.py  models.py  tax_calculator.py
nestegg/static/: build.sh  package-lock.json  package.json  tsconfig.json
nestegg/static/css/: styles.css
nestegg/static/js/: app.js  app.js.map  darkmode.js  darkmode.js.map  services.js  services.js.map  types.js  types.js.map  ui.js  ui.js.map
nestegg/static/ts/: app.ts  darkmode.ts  services.ts  types.ts  ui.ts
nestegg/templates/: index.html
